--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -1,7 +1,47 @@
-<form action="{{ url_for('edit_record') }}" method="POST">
-    <input type="text" name="lastname" value="{{ user.lastname }}" required>
-    <input type="text" name="firstname" value="{{ user.firstname }}" required>
-    <input type="text" name="course" value="{{ user.course }}" required>
-    <input type="text" name="yearlevel" value="{{ user.yearlevel }}" required>
-    <button type="submit">Update</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Edit Record</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+</head>
+<body>
+    <div class="container">
+        <center><h2>Edit Record</h2></center>
+        <form action="{{ url_for('edit_record') }}" method="POST">
+            <div class="form-group">
+                <label for="student_id">ID:</label>
+                <input type="text" name="student_id" value="{{ user.student_id }}" readonly>
+            </div>
+
+            <div class="form-group">
+                <label for="lastname">LASTNAME:</label>
+                <input type="text" name="lastname" value="{{ user.lastname }}" required>
+            </div>
+
+            <div class="form-group">
+                <label for="firstname">FIRSTNAME:</label>
+                <input type="text" name="firstname" value="{{ user.firstname }}" required>
+            </div>
+
+            <div class="form-group">
+                <label for="course">COURSE:</label>
+                <input type="text" name="course" value="{{ user.course }}" required>
+            </div>
+
+            <div class="form-group">
+                <label for="yearlevel">YEAR LEVEL:</label>
+                <input type="text" name="yearlevel" value="{{ user.yearlevel }}" required>
+            </div>
+
+            <button type="submit">Update</button>
+        </form>
+
+        <!-- Add the Back button below the form -->
+        <div class="tabs">
+            <button onclick="window.location.href='/student_dashboard'" class="back-button">Back</button>
+        </div>
+    </div>
+</body>
+</html>
