--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -7,27 +7,21 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+    {% include 'header.html' %}
+
     <div class="dashboard-container">
         <p>Welcome, {{ user.firstname }} {{ user.lastname }}!</p>
-        <p>Your User ID: {{ user.id }}</p>
-        <p>Remaining Sessions: {{ remaining_sessions }}</p>
         
-
         {% if user %}
         <div class="student-info">
             <p><strong>ID:</strong> {{ user.student_id }}</p>
-            <p><strong>Last Name:</strong> {{ user.lastname }}</p>
-            <p><strong>First Name:</strong> {{ user.firstname }}</p>
-            <p><strong>Course:</strong> {{ user.course }}</p>
-            <p><strong>Year Level:</strong> {{ user.yearlevel }}</p>
+            <p><strong>LAST NAME:</strong> {{ user.lastname }}</p>
+            <p><strong>FIRST NAME:</strong> {{ user.firstname }}</p>
+            <p><strong>COURSE:</strong> {{ user.course }}</p>
+            <p><strong>YEAR LEVEL:</strong> {{ user.yearlevel }}</p>
+            <p><strong>REMAINING SESSION:</strong> {{ remaining_sessions }}</p>
         </div>
         {% endif %}
-
-        <div class="actions">
-            <a href="{{ url_for('edit_record') }}" class="button">Edit Record</a>
-            <a href="{{ url_for('make_reservation') }}" class="button">Reservation</a>
-            <a href="{{ url_for('logout') }}" class="button logout">Logout</a>
-        </div>
     </div>
 </body>
 </html>
