--- a/templates/edit_record.html
+++ b/templates/edit_record.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
+    {% include 'header.html' %}
     <div class="container">
         <center><h2>Edit Record</h2></center>
         <form action="{{ url_for('edit_record') }}" method="POST">
@@ -39,9 +40,6 @@
         </form>
 
         <!-- Add the Back button below the form -->
-        <div class="tabs">
-            <button onclick="window.location.href='/student_dashboard'" class="back-button">Back</button>
-        </div>
     </div>
 </body>
 </html>
