--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo">
+        <center><img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="logo"></center>
 
         <!-- Login Form -->
         <div id="login" class="form-section active">
