Updated index and style file

--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
         <h1>STUDENT DASHBOARD</h1>
     </div>
     <div class="logo">
-        <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="main-logo">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="main-logo">
         <img src="{{ url_for('static', filename='UC_logo.png') }}" alt="Logo" class="uc-logo">
         <img src="{{ url_for('static', filename='PSITS_LOGO.png') }}" alt="Logo" class="psits-logo">
     </div>
