--- a/templates/index.html
+++ b/templates/index.html
@@ -58,8 +58,8 @@
                     <option value="" disabled selected>Select Course</option>
                     <option value="BSIT">BS Information Technology</option>
                     <option value="BSCS">BS Computer Science</option>
-                    <option value="BSIS">BS Information Systems</option>
-                    <option value="BSECE">BS Electronics and Communications Engineering</option>
+                    <option value="BSCJ">BS Criminology Justice</option>
+                    <option value="BSHM">BS Hospitality Management</option>
                     <option value="BSCE">BS Civil Engineering</option>
                     <option value="BSEE">BS Electrical Engineering</option>
                 </select>
