--- a/static/style.css
+++ b/static/style.css
@@ -160,6 +160,7 @@ select {
     text-align: center;
     width: 30%;
     margin: auto;
+    
 }
 
 .dashboard-container h2 {
@@ -186,6 +187,41 @@ select {
 
 .dashboard-container ul li a:hover {
     color: gray;
+}
+
+.history_dashboard-container {
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    width: 60%;
+    margin: auto;
+
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+
+tr:nth-child(even) {
+    background-color: #f9f9f9;
+}
+
+tr:hover {
+    background-color: #ddd;
 }
 
 /* Reservation Styles */
@@ -481,7 +517,7 @@ select {
     text-decoration: none;
     padding: 10px 20px;
     font-size: 16px;
-    margin-right: 15px;
+    margin-right: none;
     background-color: blue;
     border-radius: 5px;
     transition: background-color 0.3s;
@@ -540,12 +576,8 @@ select {
     background-color: #0056b3;
 }
 
-.logout {
+.Logout {
     background-color: red;
-}
-
-.logout:hover {
-    background-color: #c82333;
 }
 
 @media (max-width: 768px) {
@@ -568,3 +600,5 @@ select {
         font-size: 14px;
     }
 }
+
+
