--- a/templates/header.html
+++ b/templates/header.html
@@ -11,7 +11,7 @@
         <a href="{{ url_for('student_dashboard') }}">Home</a>
         <a href="{{ url_for('edit_record') }}">Edit Record</a>
         <a href="{{ url_for('make_reservation') }}">Reservation</a>
-        <a href="{{ url_for('logout') }}" class="logout">Logout</a>
+        <a href="{{ url_for('history') }}">History</a> <!-- Added History link -->
+        <a href="{{ url_for('logout') }}" class="Logout">Logout</a>
     </div>
-    
 </div>
