--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -4,10 +4,25 @@
         <meta charset="UTF-8">
         <title>Admin Dashboard</title>
         <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+        
     </head>
     <body>
+        <style>
+            .logo {
+    display: flex;
+    align-items: center;
+    position: relative;
+    right: 170px;
+    gap: 15px; /* Adjust space between logos */
+}
+        </style>
         <div class="admin-header">
-            <h1>Admin Dashboard</h1>
+            <h1>ADMIN DASHBOARD</h1>
+            <div class="logo">
+                <img src="{{ url_for('static', filename='logo.png') }}" alt="Logo" class="main-logo">
+                <img src="{{ url_for('static', filename='UC_logo.png') }}" alt="Logo" class="uc-logo">
+                <img src="{{ url_for('static', filename='PSITS_LOGO.png') }}" alt="Logo" class="psits-logo">
+            </div>
             <a href="/logout" class="admin-logout">Logout</a>
         </div>
         
