--- a/static/style.css
+++ b/static/style.css
@@ -485,17 +485,23 @@ tr:hover {
 .main-logo {
     height: 60px; /* Adjust as needed */
     width: auto;
+    position: relative;
+    left: 85px;
 }
 
 
 .uc-logo {
     height: 45px; /* Set a different height */
     width: auto;
+    position: relative;
+    left: 85px;
 }
 
 .psits-logo {
     height: 45px; /* Set a different height */
     width: auto;
+    position: relative;
+    left: 85px;
 }
 
 .header-title h1 {
